# mcp-demo

./: .gitignore  README.md  mcp_client.py  mcp_server.py  pyproject.toml  utils.py
